[FIX] mail: make discuss look less harsh visually
Especially in dark theme, UI had too much contrast, which
makes using Discuss more exhausting than it should.

PR makes the following improvements to make Discuss look more
pleasing:

- Dark theme: selected item is greyish rather than greenish
- Discuss app borders and composer have half reduced opacity
- Dark theme: background of conversation is slightly less dark
- Message bubbles no longer have borders
- White theme: date separator is slightly less visible
- Discuss sidebar channel items have more vertical spacing

X-original-commit: abd1da743db64f372f41aec7c296cf3a44f1537e

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -88,6 +88,7 @@
 
 .o-mail-Composer-bg {
     background-color: var(--mail-Composer-bg, $o-view-background-color);
+    --border-opacity: .5;
 }
 
 .o-mail-Composer-inputStyle {
@@ -167,7 +168,6 @@
 }
 
 .o-mail-Composer-inputContainer {
-    --border-opacity: 0.75;
 
     &.o-iosPwa:not(:focus-within) {
         margin-bottom: map-get($spacers, 5) !important;
